--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Montserrat", sans-serif;
-  background-color: #fff;
+  background-color: #625e5e;
   gap: 36px;
 }
 
@@ -19,7 +19,7 @@
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
-  color: #000000;
+  color: #fff;
 }
 
 .btn-style {
@@ -35,6 +35,11 @@
   line-height: 44px;
   color: #fff;
   cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+
+.btn-style:hover {
+  transform: scale(1.1);
 }
 
 .btn-add {
